kubernetes/NGINXIngressController/nginx-ingress-rule.yaml
# This tells the ingress controller how to route traffic
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Matches the --ingress-class in controller
  rules:
  - host: localhost         # Will route http://localhost requests
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
